# meta-lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  clang-tidy
include/: basics.hpp  conversion-vector.hpp  foreach.hpp  meta-basics.hpp  metalib.hpp  pair.hpp  priority-queue.hpp  set.hpp  vector.hpp
include/detail/: basics.hpp  conversion-vector.hpp  exec.hpp  exec1.hpp  fold.hpp  foreach.hpp  integral.hpp  meta-basics.hpp  pair.hpp  priority-queue.hpp  set.hpp  vector.hpp
src/: ConversionMatrixTest.cpp  ExecTest.cpp  ExtractFirstError.cpp  FoldTest.cpp  ForeachTest.cpp  PriorityQueueTest.cpp  PropagateErrorTest.cpp  SetTest.cpp  VectorTest.cpp  test.cpp
test/: CMakeLists.txt
test/include/: TestCommonDefs.hpp
test/src/: ConversionVectorTest.cpp  ExecutorTest.cpp  ExtractFirstErrorTest.cpp  FoldTest.cpp  ForeachTest.cpp  PriorityQueueTest.cpp  PropagateErrorTest.cpp  SetTest.cpp  VectorTest.cpp
